Fixed bug where basket items where not clearing and the first basket was not showing up. Added pics for sleep. Changed kenburns.js for slide.js, so we can link the images. Modded the analytics so that if there's an out and not an in, it will create an in for it (was crashing app)

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -27,6 +27,17 @@ a:visited {text-decoration: none; color:#fff;
   z-index:100;
 }
 
+.slides_container {
+  width: 1024px;
+  height: 600px;
+}
+
+.slides_container div {
+  width: 1024px;
+  height: 600px;
+  display:block;
+}
+
 #sleepSlideshow
 {
   width: 1024px;
@@ -34,8 +45,8 @@ a:visited {text-decoration: none; color:#fff;
   position: absolute;
   z-index:99;
   display: none;
+  
 }
-
 
 #sleepSlideshow img
 {
